--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "homepage": "https://github.com/mikeleppane/Full-Stack-open-2021-part3#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.8",
+    "mongoose": "^6.0.5",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
